added placeholder audio files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+
+    <div class="music-container">
+        <audio src="musics/Ados.mp3" class="music" controls data-name="ados"></audio>
+        <audio src="musics/Anil.mp3" class="music" controls data-name="anil"></audio>
+        <audio src="musics/Hayedeh.mp3" class="music" controls data-name="haydeh"></audio>
+        <audio src="musics/Mücadelem Bitmez.mp3" class="music" controls data-name="mucadelemBitmez"></audio>
+        <audio src="musics/Hesap Verin.mp3" class="music" controls data-name="hesapVerin"></audio>
+    </div>
     
 </body>
 </html>
